--- a/Home/css/home.css
+++ b/Home/css/home.css
@@ -20,7 +20,9 @@ a
 
 .home
 {
-    background-image:linear-gradient(rgba(0, 0, 0, 0.8),rgba(0, 0, 0, 0.8)) ,url("../images/bg.jpg");
+    background-image:linear-gradient(rgba(0, 0, 0, 0.7),rgba(0, 0, 0, 0.7)) ,url("../images/bg.jpg");
+    //background:#040425;
+    //background-image:url("../images/hero-bg.png");
     background-position:right;
     background-repeat: no-repeat;
     background-size: cover;   
@@ -143,7 +145,7 @@ header
 
     header li a
     {    
-        color:  #ccc;    
+        color:  #aaa;    
         font-size: 1em;
         font-weight: 500;
         padding:10px 25px;
@@ -158,7 +160,7 @@ header
 
     .active
     {
-        color:#f0cf14;
+        color:ivory;
     }
 
     .menu
