--- a/Home/css/home.css
+++ b/Home/css/home.css
@@ -21,12 +21,10 @@ a
 .home
 {
     background-image:linear-gradient(rgba(0, 0, 0, 0.7),rgba(0, 0, 0, 0.7)) ,url("../images/bg.jpg");
-    //background:#040425;
-    //background-image:url("../images/hero-bg.png");
-    background-position:right;
+    background-position:center;
     background-repeat: no-repeat;
     background-size: cover;   
-    height: 100%;
+    /*height: 100%;*/
     width: 100%;  
 }
 header
@@ -36,7 +34,7 @@ header
 
 .navigation
 {
-    padding: 5%;
+    padding: 4%;
 }
 
 .navigation ul
@@ -87,7 +85,7 @@ header
     font-weight:300;
     line-height: 1.8em;
     padding: 0% 10%;    
-    margin-top: 2%;
+    margin-top: 3%;
 }
 
 #welcome
@@ -182,7 +180,8 @@ header
     .hero .tagline
     {
         padding: 0% 15%;
-        font-size:1.5em ;
+        font-size:1.1em ;
+        margin-top: 1%;
     }
 
     #welcome
@@ -218,8 +217,8 @@ header
     .hero .tagline
     {
         padding: 0% 20%;
-        font-size:1.8em ;
-        margin-top: -.5%;
+        font-size:1.2em ;
+        margin-top: 1%;
     }
 
     #welcome
