--- a/Footer/css/footer.css
+++ b/Footer/css/footer.css
@@ -20,22 +20,27 @@ h3
 {
     font-weight: 500;
     margin-bottom:20px;
+    color:ivory;
 }
 
 p
 {
     font-size: 0.9em;
+    color: #ccc;
 }
 
 .team
 {
     background-image:url("../images/middle.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;   
     text-align: center;
     padding: 15% 0%;
     width: 100%;
 }
 
-.team h2
+.team h3
 {
     color: rgb(73, 73, 73);
     font-size: 130%;
@@ -46,15 +51,15 @@ p
 {
     line-height: 25px;
     margin:20px 20px 10px 20px;
-    color: rgb(129, 129, 129);
+    color: #888;
 }
 
 .team button
 {
-    padding:10px;
-    border: 2px solid rgba(73, 73, 73,0.7);
+    padding:10px 50px;
+    border: 2px solid rgba(73, 73, 73,0.6);
     border-radius: 3px;
-    color: rgba(73, 73, 73,0.7);
+    color: rgba(73, 73, 73,0.6);
     background:rgba(255,255,255,0);
     font-weight: 500;
     font-size: 75%;
@@ -63,8 +68,8 @@ p
 
 .team button:hover
 {
-    background:#09095E;
-    border:  2px solid #09095E;
+    background:#1d0233;
+    border:  2px solid #1d0233;
     color:ivory;
     cursor: pointer;
     transition: .5s;
@@ -72,11 +77,10 @@ p
 
 footer
 {
-    background:#09095e;
+    background:#1d0233;
     width:100%;
     height:100%;
     padding: 5% 0%;
-    color:ivory;
     display:flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -100,13 +104,14 @@ footer div
     padding: 7px;
     list-style:none;
     font-size: 0.9em;
-    font-weight: 400;
+    font-weight: 300;
     
 }
 
 .q-links a
 {
-    color: #aaa;
+    text-decoration: underline;
+    color: #ccc;
 }
 
 .q-links a:hover
@@ -140,7 +145,7 @@ footer div
     text-align: center;
     line-height: 20px;
     font-size: 0.8em;
-    color: #aaa;
+    font-weight: 300;
     
 }
 
@@ -153,7 +158,7 @@ footer div
 {
     font-size: 0.8em;
     line-height: 20px;
-    color: #aaa;
+    font-weight: 300;
 }
 
 .social-media img
@@ -177,6 +182,17 @@ footer div
         padding: 10% 0%;
     }
 
+    .team button
+    {
+        padding:10px 20px;
+        border: 2px solid rgba(73, 73, 73,0.6);
+        border-radius: 3px;
+        color: rgba(73, 73, 73,0.6);
+        background:rgba(255,255,255,0);
+        font-weight: 500;
+        font-size: 75%;
+        
+    }
     .q-links
     {
         width: 30%;
@@ -219,19 +235,6 @@ footer div
     .address img
     {
         width: 7%;
-    }
-
-    .address p
-    {
-        line-height: 30px;
-        font-size:1em;
-        font-weight: 400;        
-    }
-
-    .social-media p
-    {
-        line-height: 30px;
-        font-size:1em;        
     }
 
     .social-media img
