--- a/css/event.css
+++ b/css/event.css
@@ -105,7 +105,11 @@
 	padding: 6px;
 	
 	border: 5px #ffffff;
-	flex:auto;
-	justify-content: center;
+	display: flex;
+	justify-content: space-around;
 }
-
+.card img{
+	height: 450px;
+	width: 400px;
+	filter: drop-shadow(2px 4px 8px #585858);
+}
