--- a/css/event.css
+++ b/css/event.css
@@ -110,15 +110,18 @@
 }
 
 .card {
-	height: 500px;
-	width: 300px;
-	padding: 6px;
+	height: fit-content;
+	width: fit-content;
+	padding: 6px 6px 6px 6px;
+	margin:  25px;
 	border: 5px #ffffff;
 	flex: 0 1 20%;
+	background-color: #ffffff;
+	box-shadow: 2px 20px 8px #555353;
 }
 
 .card img {
 	height: 450px;
 	width: 400px;
-	filter: drop-shadow(2px 20px 8px #555353);
+	/* filter: drop-shadow(2px 20px 8px #555353); */
 }
