--- a/css/EventCards.css
+++ b/css/EventCards.css
@@ -12,6 +12,7 @@
   text-align: left;
   width: 100%;
   height: 400px;
+  /* box-shadow: 6px 0px 10px rgba(223, 219, 219, 0.4); */
 }
 
 .snip1527 * {
