--- a/css/event.css
+++ b/css/event.css
@@ -114,7 +114,7 @@
 	height: fit-content;
 	width: fit-content;
 	padding: 6px 6px 6px 6px;
-	margin:  25px;
+	margin: 25px;
 	border: 5px #ffffff;
 	flex: 0 1 20%;
 	background-color: #ffffff;
@@ -134,8 +134,14 @@
 	height: 1000px;
 
 }
+
 .events_research h1 {
 	color: #ffffff;
 	font-family: 'Ubuntu', sans-serif;
 	font-size: 45px;
+}
+
+.events_research .snip1527 {
+	box-shadow: 2px 0px 10px rgba(223, 219, 219, 0.4);
+
 }
