--- a/css/event.css
+++ b/css/event.css
@@ -1,29 +1,3 @@
-.violet {
-	background-color: #2b0b4b;
-	color: #ffffff;
-	height: 300px;
-}
-
-.white1 {
-	background-color: #ffffff;
-	height: 100px;
-}
-
-.orange {
-	background-color: #8528a1;
-	height: 300px;
-}
-
-.white2 {
-	background-color: white;
-	height: 100px;
-}
-
-.green {
-	background-color: #c770f0;
-	height: 300px;
-	position: relative;
-}
 
 .events button {
 	margin-top: 175px;
@@ -87,61 +61,42 @@
 	width: 280px;
 }
 
-.events {
+.event_section{
 	background-image: url(/images/events_bg.svg);
+    background-position:center;
 	padding-top: 32px;
-	height: 1000px;
-
+	
+}
+.events {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: space-evenly;
 }
 
-.events h1 {
+.event_section h1 {
 	color: #ffffff;
 	font-family: 'Ubuntu', sans-serif;
 	font-size: 45px;
 }
 
-.event_cards {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-between;
-	margin-top: 50px;
-	width: fit-screen-width;
-	height: inherit;
 
-}
-
-.card {
-	height: fit-content;
-	width: fit-content;
-	padding: 6px 6px 6px 6px;
-	margin: 25px;
-	border: 5px #ffffff;
-	flex: 0 1 20%;
-	background-color: #ffffff;
-	box-shadow: 2px 20px 8px #555353;
-}
-
-.card img {
-	height: 450px;
-	width: 400px;
-	/* filter: drop-shadow(2px 20px 8px #555353); */
-}
-
-.events_research {
+.events_research_section {
 	background-image: url(/images/research_bg.jpg);
+    background-position:center;
 	background-size: cover;
 	padding-top: 32px;
-	height: 1000px;
+	
 
 }
 
-.events_research h1 {
+.events_research_section h1 {
 	color: #ffffff;
 	font-family: 'Ubuntu', sans-serif;
 	font-size: 45px;
 }
 
-.events_research .snip1527 {
+.events_research_section .snip1527 {
 	box-shadow: 2px 0px 10px rgba(223, 219, 219, 0.4);
 
 }
